[tool.poetry]
name = "modeStep"
version = "0.1.0"
description = "Ableton Live 11+ control surface for the SoftStep 2"
authors = ["Kevin Montag <kmontag@cs.stanford.edu>"]
readme = "README.md"

# Use poetry only for dependency management, not packaging (as the application doesn't
# need to be packaged).
package-mode = false

[tool.poetry.dependencies]
# Newer python version for development tasks. Note this is different from Live's built-in
# version (3.7), since some development packages have dropped support for 3.7.
python = "^3.8"

# Packages available at runtime in Live's "site-packages" folder.
future = "0.18.2"
raven = "6.10.0"

# Dependencies for testing and build tasks. These won't be available at runtime in Live.
[tool.poetry.group.dev.dependencies]
# Decompilation tool for generating system MIDI Remote Scripts.
decompyle3 = "^3.9.0"

# MIDI input/output for tests.
mido = "^1.3.2"
python-rtmidi = "^1.5.2"

# Type checker.
pyright = "^1.1.348"

# Test framework.
pytest = "^7.1.0"
pytest-asyncio = "^0.21.1"
pytest-bdd = "^6.1.1"

# Pretty printer for tests.
rich = "^13.7.0"

# Formatter and linter
ruff = "^0.1.13"

# Used to generate images for the README.
svgwrite = "^1.4.2"

# Backport post-python3.7 typing extensions. This can't be imported at runtime, but can
# be used in .pyi files or with the TYPE_CHECKING variable.
typing-extensions = "^4.7.0"

[tool.pyright]
# Live's built-in python version as of v12.0.2 is 3.7.3.
pythonVersion = "3.7"

exclude = ["**/__pycache__", ".git", ".venv", "__ext__/"]
extraPaths = ["./__ext__/System_MIDIRemoteScripts"]

# Suppress warnings about the Live module not existing.
reportMissingModuleSource = false

# Set up the virtual environment.
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
# Allow output.
addopts = "--capture=no"

[tool.ruff]
target-version = "py37"
# Exclude generated libs.
extend-exclude = ["__ext__"]

[tool.ruff.lint]
# - ARG: unused arguments
# - B: flake8-bugbear
# - E: pycodestyle errors
# - I: import sorting
# - W: pycodestyle warnings
extend-select = ["ARG", "B", "E", "I", "W"]
# Turn off strict max line length; B950 allows for exceeding the max
# line length in some cases.
extend-ignore = ["E501"]

[tool.ruff.lint.isort]
# Explicitly specify Live as a standard library to avoid potential
# inconsistencies across systems when sorting imports.
extra-standard-library = ["Live"]

[tool.semantic_release]
major_on_zero = false
allow_zero_version = true
version_toml = [
  "pyproject.toml:tool.poetry.version",
]
